# investing

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  preview.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  sector_overrides.toml  update.py
.cursor/: hooks.json
.cursor/hooks/: post-agent-verify.sh  post-edit-verify.sh
.cursor/rules/: personal-project.mdc  python-venv.mdc
.github/: dependabot.yml
.github/workflows/: main.yml  regenerate-logos.yml  security.yml  test.yml
assets/: holdings_sort.js  page.css  ticker_marquee.js  trades_sort.js  treemap_layout.js  yearly_returns.js
assets/src/css/: 00-base.css  10-ticker.css  20-holdings.css  30-trades.css  40-bars.css  50-treemap.css  60-return-chart.css  70-returns-footer.css  90-responsive.css  page.css
assets/src/js/: hash_clear.js  holdings_sort.js  nav_scroll.js  return_chart.js  ticker_marquee.js  trades_sort.js  treemap_layout.js  yearly_returns.js
investing/: __init__.py  __main__.py  assets.py  cli.py  clock.py  errors.py  formatting.py  fx.py  holdings.py  log.py  logos.py  maintenance_notifier.py  market_data.py  market_data_store.py  paths.py  pchip.py  performance.py  safe_run.py  safehtml.py  sector_overrides.py  sheets.py  trades.py  types.py  webpage.py
investing/webpage/: __init__.py  _page.py  anchors.py  bars.py  head.py  holdings_view.py  og_image.py  return_chart.py  sector_treemap.py  sitemap.py  trades_view.py
jg_investing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
logos/: README.md
market_data/: manifest.json
market_data/fx/: EUR.npz
market_data/history/: VUAA.L.json
market_data/tickers/: AIRJ.json  AMAT.json  BABA.json  BIDU.json  FISV.json  GOOGL.json  IT.json  KMX.json  LRCX.json  META.json  NVDA.json  QCOM.json  SSU.DU.json  TSM.json  VUAA.L.json
scripts/: build_assets.py  preview.py  stage_site.py  tighten_logos.py
tests/: _css_helpers.py  _html_helpers.py  _webpage_support.py  conftest.py  test_browser.py  test_build_assets.py  test_calc_twr.py  test_charts.py  test_cli_helpers.py  test_cli_summary.py  test_csp_contract.py  test_exchange_rate.py  test_fx_cache.py  test_holding.py  test_integration.py  test_js_assets.py  test_maintenance_notifier.py  test_market_data.py  test_market_data_store.py  test_pchip.py  test_performance.py  test_preview_html.py  test_pull_data.py  test_safe_run.py  test_safehtml.py  test_sector_overrides.py  test_stage_site.py  test_summarize.py  test_tighten_logos.py  test_trade_and_combine.py  test_trades.py  test_webpage.py  test_webpage_core.py  test_webpage_holdings.py  test_webpage_render.py  test_webpage_return.py  test_webpage_sections.py  test_webpage_ticker.py  test_webpage_trades.py  test_webpage_treemap.py  (+1 more)
