[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jg-investing"
version = "0.0.0"
description = "Generator for the JG Investment Portfolio webpage."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Jan Grzybek" }]
license = { text = "MIT" }
dependencies = [
  "gspread",
  "yfinance",
  "requests",
  "python-dateutil",
  "Pillow",
  "cairosvg",
  "scipy",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
  "beautifulsoup4>=4.12",
  "pre-commit>=3.7",
]

[tool.setuptools]
# This repo is built as a single ``update.py`` plus ``preview.py`` script
# rather than an installable library. Listing both as py_modules lets
# editable installs / lint targets pick them up without inventing a
# package layout.
py-modules = ["update", "preview"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["update", "preview"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  ".venv",
  ".testvenv",
  "preview",
  "logos",
]

[tool.ruff.lint]
# Conservative starter set: pyflakes, pycodestyle errors, isort, pyupgrade,
# bugbear, comprehensions. Tightening can come once the codebase has been
# through a first formatting pass.
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
# Long literal lines inside the still-large update.py are existing prose;
# allow them for now so the lint baseline is clean. The CSS / JS payloads
# have already moved out into assets/ where they're handled by their own
# tooling.
ignore = [
  "E501",   # line too long
  "E741",   # ambiguous variable name
  "B008",   # function call in default argument (used intentionally for ExchangeRate)
  "SIM108", # ternary simplification (sometimes harms readability)
  "SIM117", # combine nested with-statements
  "RUF005", # iterable unpacking vs concatenation (legacy style)
  "RUF012", # mutable class attribute defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "RUF018"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
# Strict mode is the goal, but the existing codebase is largely untyped.
# Start permissive and tighten over time.
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["update", "preview"]
disallow_untyped_defs = false
