[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jg-investing"
version = "0.1.0"
description = "Generator for the JG Investment Portfolio webpage."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Jan Grzybek" }]
license = "MIT"
license-files = ["LICENSE"]
# Minimum floors keep Dependabot's bumps reviewable: a major upgrade
# that breaks the integration shape (e.g. yfinance dropping
# ``Ticker.get_info``) will fail to install rather than fail at runtime
# in CI. ``requirements.in`` carries the same floors so the resolver
# sees them whether you build via ``pip install -e`` or compile a
# lockfile with ``pip-compile requirements.in``.
dependencies = [
  "gspread>=6",
  "yfinance>=0.2.40",
  "requests>=2.32",
  "python-dateutil>=2.9",
  "Pillow>=10",
  "cairosvg>=2.7",
  "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
  "beautifulsoup4>=4.12",
  "html5lib>=1.1",
  "pre-commit>=3.7",
  "rjsmin>=1.2",
  "csscompressor>=0.9",
  # ``pip-compile`` regenerates the pinned lock files from this
  # ``pyproject.toml`` itself (no separate ``requirements.in``); the
  # CONTRIBUTING guide documents the one-liner.
  "pip-tools>=7",
  # Typeshed packages so mypy can resolve ``dateutil`` / ``requests``
  # annotations cleanly. Previously declared inline in the pre-commit
  # mypy hook; lifted here so the dev environment, CI and the
  # ``language: system`` pre-commit hook all see the same stubs.
  "types-python-dateutil",
  "types-requests",
]

[project.urls]
Homepage = "https://jan-grzybek.github.io/investing/"
Source = "https://github.com/jan-grzybek/investing"
Issues = "https://github.com/jan-grzybek/investing/issues"

[tool.setuptools]
# The page generator lives in ``investing/``; ``python -m investing``
# runs the leak-safe production entrypoint (used by
# ``.github/workflows/main.yml``). The local-preview helper
# (``scripts/preview.py``) is also picked up so editable installs
# and lint targets see it alongside the package.
packages = ["investing", "investing.webpage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# ``pythonpath = ["."]`` lets the test suite resolve
# ``import investing`` without any ``sys.path`` mutation in
# ``tests/conftest.py``.
pythonpath = ["."]
addopts = "-ra --strict-markers"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["investing"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
# Baseline measured at 89.3% on main; ratchet downward only after a
# deliberate decision. A drop below this floor fails CI rather than
# silently eroding the safety net.
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  ".venv",
  ".testvenv",
  "preview",
  "logos",
  "assets",
]

[tool.ruff.lint]
# Conservative starter set: pyflakes, pycodestyle errors, isort, pyupgrade,
# bugbear, comprehensions. Tightening can come once the codebase has been
# through a first formatting pass.
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
# The ignore list is deliberately small: each entry corresponds to a
# rule that currently fires in the codebase and that we've chosen to
# accept rather than rewrite around. Audited regularly -- previous
# entries (E741, B008, SIM117, RUF012) were dropped once it became
# clear the patterns they guarded against no longer existed.
ignore = [
  # HTML / SVG / JSON-LD prose builders carry intentionally long
  # string literals; reflowing them would obscure the rendered
  # output.
  "E501",   # line too long
  # ``holdings.py``'s TSR / XIRR branch reads more clearly as an
  # ``if`` block than a ternary because the comment immediately
  # above explains the two cases as a pair of branches.
  "SIM108", # ternary simplification (sometimes harms readability)
  # ``performance.py``'s top-10 bucket construction concatenates a
  # sliced list with the synthetic ``Other equities`` tuple; the
  # PEP 448 unpacking form (``[*ranked[:10], (...)]``) reads less
  # well than the explicit concatenation when the ``+`` is the
  # whole point of the expression.
  "RUF005", # iterable unpacking vs concatenation (legacy style)
]

[tool.ruff.lint.per-file-ignores]
# Pytest fixtures imported from ``tests._webpage_support`` /
# ``conftest`` get flagged as F811 (redefined) and F401 (unused) by
# ruff because the link between "imported name" and "fixture
# parameter" only exists at collection time. The pattern is
# conventional in pytest and rewriting the suite around indirect
# fixture lookup would obscure intent for no real safety benefit.
"tests/*" = ["B011", "RUF018", "F401", "F811", "RUF100"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
# Permissive by default for the partially-typed modules
# (``investing.holdings``, ``investing.performance``,
# ``investing.webpage._page``, ...) that still carry untyped
# helpers from before the codebase grew its TypedDicts. The
# override block below ratchets ``disallow_untyped_defs`` on for
# every fully-typed module so a regression -- a freshly added
# untyped helper inside one of them -- fails the build.
disallow_untyped_defs = false
ignore_missing_imports = true

# Modules that are fully annotated today. New code added here MUST
# carry signatures; mypy will fail the build otherwise. To onboard a
# module, type its public surface end-to-end, then move its name into
# the list below. The remaining ``investing.*`` modules
# (holdings, performance, sheets, webpage._page, webpage.og_image,
# formatting, fx, pchip) stay permissive until their internal helpers
# get the same treatment.
[[tool.mypy.overrides]]
module = [
  "investing.errors",
  "investing.log",
  "investing.paths",
  "investing.types",
  "investing.safehtml",
  "investing.clock",
  "investing.assets",
  "investing.market_data",
  "investing.safe_run",
  "investing.cli",
  "investing.logos",
  "investing.trades",
  "investing.webpage",
  "investing.webpage.anchors",
  "investing.webpage.sitemap",
  "investing.webpage.head",
  "investing.webpage.bars",
  "investing.webpage.holdings_view",
  "investing.webpage.trades_view",
  "investing.webpage.return_chart",
]
disallow_untyped_defs = true
